メッセージ送信機能の実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -119,13 +119,13 @@ margin-top: 36px;
   width: 100%;
   display: flex;
 }
-.type_a_message{
+.form-message {
   border: none;
   height: 50px;
   width: 100%;
   padding-left: 10px;
 }
-.send{
+.form-submit{
   background-color: #38AEF0;
   border: none;
   color: white;
