チャットルームの削除機能の実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="right-header">
 <div class="chat-end">
-<a >チャットを終了します</a>
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
 </div>
 </div>
 </div>
